# trading-primitives

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  pnl_engine.py
models/: __init__.py  domain.py
tests/: conftest.py
tests/unit/: test_pnl_engine.py
