[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-primitives"
version = "0.1.0"
description = "Real-time PnL engine for trading positions"
requires-python = ">=3.12"
dependencies = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-html==4.1.1",
    "faker==20.1.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "testcontainers==3.7.0",
    "redis==5.0.1",
    "fastapi[all]==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic[email]==2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.11",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
    "ipython==8.18.1",
    "ipdb==0.13.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # import sorting
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "api", "persistence"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.setuptools]
packages = ["core", "models", "api", "persistence"]